--- a/.github/workflows/tauri-cli.yml
+++ b/.github/workflows/tauri-cli.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           repository: 'tauri-apps/tauri'
       - name: Build
-        run: cd cli/core && cargo build --release
+        run: cd tooling/cli.rs && cargo build --release
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
