--- a/.github/workflows/tauri-cli.yml
+++ b/.github/workflows/tauri-cli.yml
@@ -37,7 +37,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./cli/core/target/release/${{ matrix.artifact_name }}
+          file: ./tooling/cli.rs/target/release/${{ matrix.artifact_name }}
           tag: tauri-cli-${{ github.event.inputs.version }}
           asset_name: ${{ matrix.asset_name }}
           release_name: Tauri CLI ${{ github.event.inputs.version }}
