refactor: run on `ubuntu-18.04` to reduce required libc version

--- a/.github/workflows/tauri-cli.yml
+++ b/.github/workflows/tauri-cli.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-18.04
             artifact_name: cargo-tauri
             asset_name: tauri-cli_linux
           - os: windows-latest
